# celer-adept

./: .clang-format  CMakeLists.txt  README.md  celer-trackingmanager-offload.cc  trackingmanager-offload.cc
GPUOffload/: GPUOffload.cc  GPUOffload.hh  GPUOffloadInterface.hh
GPUOffload/adept/: AdeptOffload.cc  AdeptOffload.hh
GPUOffload/adeptcpu/: AdeptCPUOffload.cc  AdeptCPUOffload.hh  AdeptCPUTrackingManager.cc  AdeptCPUTrackingManager.hh  TrackingManagerHelper.hh
GPUOffload/celeritas/: Celeritas.cc  Celeritas.hh  CeleritasOffload.cc  CeleritasOffload.hh  CeleritasOffloadBuilder.cc  CeleritasOffloadBuilder.hh
GPUOffload/none/: NoOffload.cc  NoOffload.hh
